--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,5 +36,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
       - name: Install dependencies
         run: bundle install
+      - name: Run rubocop
+        run: bundle exec rubocop
       - name: Run tests
-        run: bundle exec rake
+        run: bundle exec rspec
